Python/Tests/TestData/TestDiscoverer/SyntaxError/test_syntax_error.py
def test_with_syntax_error():
    for (]

